WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
248960
Creating a _WKWebExtension with an invalid path should return nil
https://bugs.webkit.org/show_bug.cgi?id=248960
Summary
Creating a _WKWebExtension with an invalid path should return nil
Brian Weinstein
Reported
2022-12-08 11:08:12 PST
Instead, it creates an empty web extension.
Attachments
Add attachment
proposed patch, testcase, etc.
Timothy Hatcher
Comment 1
2022-12-08 12:12:15 PST
Pull request:
https://github.com/WebKit/WebKit/pull/7338
EWS
Comment 2
2022-12-08 13:07:02 PST
Committed
257584@main
(c893edaa156c): <
https://commits.webkit.org/257584@main
> Reviewed commits have been landed. Closing PR #7338 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-12-08 13:08:22 PST
<
rdar://problem/103143430
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug