Creating a _WKWebExtension with an invalid path should return nil. https://bugs.webkit.org/show_bug.cgi?id=248960

Reviewed by Brian Weinstein.

* Source/WebKit/UIProcess/API/Cocoa/_WKWebExtension.h:
* Source/WebKit/UIProcess/API/Cocoa/_WKWebExtension.mm:
(+[_WKWebExtension extensionWithAppExtensionBundle:]): Added.
(+[_WKWebExtension extensionWithResourceBaseURL:]): Added.
(-[_WKWebExtension initWithAppExtensionBundle:error:]): Added error param.
(-[_WKWebExtension initWithResourceBaseURL:error:]): Added error param.
(-[_WKWebExtension _initWithManifestDictionary:]): Added assert.
* Source/WebKit/UIProcess/Extensions/Cocoa/WebExtensionCocoa.mm:
(WebKit::WebExtension::WebExtension): Added error param.
* Source/WebKit/UIProcess/Extensions/WebExtension.h:
* Tools/TestWebKitAPI/cocoa/WebExtensionUtilities.mm:
(TestWebKitAPI::Util::loadAndRunExtension): Use initWithResourceBaseURL:error:.

Canonical link: https://commits.webkit.org/257584@main